// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders accept colours correctly 1`] = `
<div>
  <span
    class="sc-bdvvaa sc-dkPtyc cQWPbX bKKRMj"
  >
    Button
  </span>
</div>
`;

exports[`Button component renders normal colours correctly 1`] = `
<div>
  <span
    class="sc-bdvvaa sc-gsDJrp cQWPbX dRoUMX"
  >
    Button
  </span>
</div>
`;
